--- a/goguerrilla.conf
+++ b/goguerrilla.conf
@@ -1,7 +1,7 @@
 {
-    "GM_ALLOWED_HOSTS":"*",
+    "GM_ALLOWED_HOSTS":"ttagit.in",
     "GM_MAIL_TABLE":"new_mail",
-    "GM_PRIMARY_MAIL_HOST":"mail.example.com",
+    "GM_PRIMARY_MAIL_HOST":"ttagit.in",
     "GSMTP_HOST_NAME":"localhost",
     "GSMTP_LOG_FILE":"",
     "GSMTP_MAX_SIZE":"15728640",
@@ -9,15 +9,15 @@
     "GSMTP_PUB_KEY":"./keys/mail_server.crt",
     "GSMTP_TIMEOUT":"100",
     "GSMTP_VERBOSE":"N",
-    "GSTMP_LISTEN_INTERFACE":"127.0.0.1:25",
+    "GSTMP_LISTEN_INTERFACE":"0.0.0.0:587",
     "MAX_SMTP_CLIENTS":"10000",
     "MYSQL_DB":"gmail_mail",
-    "MYSQL_HOST":"127.0.0.1:3306",
-    "MYSQL_PASS":"",
+    "MYSQL_HOST":"localhost:8889",
+    "MYSQL_PASS":"root",
     "MYSQL_USER":"root",
     "GM_MAX_CLIENTS":"500",
 	"NGINX_AUTH_ENABLED":"N",
-	"NGINX_AUTH":"127.0.0.1:8025",
+	"NGINX_AUTH":"localhost:8025",
     "SGID":"508",
 	"GUID":"504"
 }
